2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Use new GamesFrame widget.

	* Makefile.am (INCLUDES): Added libgames-support stuff.

	* glines.c: Removed separator from dialogs as in HIG.

2003-06-08  William Jon McCann  <mccann@jhu.edu>

	* dots.png: Replaced with snazzier images.
	
	* Makefile.am (pixmap_DATA): Added new gumball theme from
	bug #105921.  Don't install unused background pixmaps.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (reset_game): Fixups to remove warnings and to make it
	ANSI C compatible.

2003-06-07  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Use pixbufs for ball images.  Use grid lines instead
	of background pixmaps.  HIG fixes for preferences dialog.

2003-06-06  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (schema_in_files): 
	* glines.schemas.in: Added gconf schemas.

	* glines.c: Glines now uses gconf.  HIG fixes for pref dialog.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	
2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2002-12-24 John Fleck <jfleck@inkstain.net>

	* help/C/glines.xml: add <figure> tags around screenshots
	so the links to them display correctly in Yelp

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/glines-C.omf:
	* help/C/glines.xml: More s/Gnome/GNOME/.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* glines.c: s/Gnome/GNOME/, for #99683.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* glines.c: (game_about_callback) (game_top_ten_callback) (game_over):
	No more multiple About dialogs, and Score dialog is now modal.
	(Bug #97320)

2002-11-18  Fernando Herrera <fherrera@onirica.com>
